# APAN5560_HW5

./: .gitignore  README.md  pyproject.toml
HW5/app/: main.py
HW5/models/: gpt2_qa.py
HW5/scripts/: train_gpt2_qa.py
